<resources>
    <string name="app_name">Anguriara</string>
    <string name="settings">Impostazioni</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="home">Home</string>
    <string name="home_string">\nall\'Anguriara al rocolo di Giavenale:</string>
    <string name="calendar">Programma 2019</string>
    <string-array name="slide_text">
        <item />
        <item name="home_slide1">Anguriara al rocolo di Giavenale\ndal 14 giugno al 27 luglio</item>
        <item name="home_slide2">13 Live show</item>
        <item name="home_slide3">Ricco menù e serate speciali.</item>
        <item name="home_slide4">Tanta sete? Ordina il tuo metro di birra!</item>
    </string-array>
    <string name="news">News</string>
    <string name="next_evenings">Prossime serate</string>
    <string name="all_evenings">Tutte le serate</string>
    <string name="complete_calendar">Calendario</string>
    <string-array name="days_of_week">
        <item>Domenica</item>
        <item>Lunedì</item>
        <item>Martedì</item>
        <item>Mercoledì</item>
        <item>Giovedì</item>
        <item>Venerdì</item>
        <item>Sabato</item>
    </string-array>
    <string-array name="months">
        <item>Gennaio</item>
        <item>Febbraio</item>
        <item>Marzo</item>
        <item>Aprile</item>
        <item>Maggio</item>
        <item>Giugno</item>
        <item>Luglio</item>
        <item>Agosto</item>
        <item>Settembre</item>
        <item>Ottobre</item>
        <item>Novembre</item>
        <item>Dicembre</item>
    </string-array>
    <string-array name="anguriara_months_activity">
        <item>@string/june</item>
        <item>@string/july</item>
    </string-array>
    <string name="close">Chiuso</string>
    <string name="bad_weather">Chiuso causa maltempo</string>
    <string name="details">DETTAGLI</string>
    <string name="event">Evento</string>
    <string name="open">Aperto</string>
    <string name="food">Cucina</string>
    <string name="opening_time">Orario di apertura</string>
    <string-array name="day_events">
        <item>DJ Marco Festa</item>
        <item>Get a Funk</item>
        <item>Aperto</item>
        <item>Chupa Cabra</item>
        <item>Spiritual Seasons</item>
        <item>Aperto</item>
        <item>Lady Rock</item>
        <item>Aperto</item>
        <item>Sound System</item>
        <item>DJ Nesh</item>
        <item>Aperto</item>
        <item>London</item>
        <item>Glories</item>
        <item>Torneo PRAVOLLEY</item>
        <item>ANGURIA RUN</item>
        <item>Serata Agritour</item>
        <item>Paolo Rossi</item>
        <item>Double M</item>
        <item>Aperto</item>
        <item>Black Velvet</item>
        <item>CLOSING PARTY</item>
    </string-array>
    <string-array name="day_event_details">
        <item>\nGenere: anni 90</item>
        <item>\nGenere: Red Hot Chili Peppers</item>
        <item>\n\nCorso di Running</item>
        <item>\nGenere: Rock Latino</item>
        <item>\nGenere: Musica Celtica</item>
        <item>\n\nCorso Running - Chiesetta S. Giustina</item>
        <item>\nGenere: Rock</item>
        <item>\n\nCorso di Running</item>
        <item>\nGenere: Musica Reggae</item>
        <item>\nGenere: HipHop R&amp;B\n\nTorneo BEERPONG su iscrizione</item>
        <item>\n\nCorso Running - Chiesetta S. Giustina</item>
        <item>\nGenere: Rock anni 60 70 80</item>
        <item>\nGenere: hit anni 2000, DJ Thomas Dalla Costa e Lele Silver\n\nTorneo PRAVOLLEY</item>
        <item />
        <item>\nCorsa Podistica dalle 20:30 organizzata da Città della Speranza</item>
        <item>\ncon piatti a km 0 e passeggiata al chiaror di luna, partenza ore 20:00</item>
        <item>\nGenere: Super serata Afro</item>
        <item>\nGenere: duo femminile acustico dagli anni 70</item>
        <item />
        <item>\nGenere: Pop Rock</item>
        <item />
    </string-array>
    <string-array name="day_event_sub_details">
        <item />
        <item />
        <item>\"Un corso di corsa\". Il giovedì su prenotazione DALLE 20.15. Le basi per correre correttamente con istruttore A.S.C., contributo di 2 euro che si devolveranno in beneficienza a Citta della Speranza (abbigliamento fluo e pila frontale!)</item>
        <item />
        <item />
        <item>\"Un corso di corsa\". Il giovedì su prenotazione DALLE 20.15. Le basi per correre correttamente con istruttore A.S.C., contributo di 2 euro che si devolveranno in beneficienza a Citta della Speranza (abbigliamento fluo e pila frontale!)\n\nVisita guidata alla Chiesetta S. Giustina. Partenza dall\'Anguriara alle ore 20.15. Gruppo di massimo 20 persone, su prenotazione al sito www.chiesasantagiustina.it</item>
        <item />
        <item>\"Un corso di corsa\". Il giovedì su prenotazione DALLE 20.15. Le basi per correre correttamente con istruttore A.S.C., contributo di 2 euro che si devolveranno in beneficienza a Citta della Speranza (abbigliamento fluo e pila frontale!)</item>
        <item />
        <item />
        <item>\"Un corso di corsa\". Il giovedì su prenotazione DALLE 20.15. Le basi per correre correttamente con istruttore A.S.C., contributo di 2 euro che si devolveranno in beneficienza a Citta della Speranza (abbigliamento fluo e pila frontale!)\n\nVisita guidata alla Chiesetta S. Giustina. Partenza dall\'Anguriara alle ore 20.15. Gruppo di massimo 20 persone, su prenotazione al sito www.chiesasantagiustina.it</item>
        <item />
        <item />
        <item />
        <item>Si chiama ANGURIARUN ed è la terza tappa del progetto \“Facciamoci in 4\”, la staffetta benefica che, per la
        prima volta, vede in sinergia le quattro più importanti manifestazioni podistiche non competitive dell\’Altovicentino
        (Stragiaxà Race, RAR, Anguria Ran e Alberto Race) per dare una speranza in più ai bambini e ragazzi con malattie rare.
        \nI fondi raccolti, saranno devoluti alla Fondazione Città della Speranza per cofinanziare il dottorato di ricerca della
        dott.ssa Concetta De Filippis su un particolare sottogruppo di malattie genetiche rare: le Mucopolisaccaridosi,
        caratterizzate dall\’accumulo patologico di alcuni zuccheri complessi che causa una progressiva degenerazione di tutti
        gli organi e, nei casi più gravi, anche del cervello. Il progetto, è sviluppato nei laboratori dell\’Istituto di
            Ricerca Pediatrica Città della Speranza a Padova.</item>
        <item />
        <item />
        <item />
        <item />
        <item />
        <item />
    </string-array>
    <string-array name="day_foods">
        <item />
        <item>Panino facciavista</item>
        <item />
        <item />
        <item>Galletti</item>
        <item />
        <item />
        <item />
        <item />
        <item>Bruschette</item>
        <item />
        <item />
        <item>Panino facciavista</item>
        <item />
        <item />
        <item />
        <item />
        <item>Polenta e laganeghe</item>
        <item />
        <item />
        <item>Paella</item>
    </string-array>
    <string name="standard_foods_w">
        \u2022 Panini freddi
        \n\u2022 Patatine fritte
        \n\u2022 Fetti d\'anguria
        \n\u2022 Gelati
    </string>
    <string name="standard_foods_t">
        \u2022 Panini freddi
        \n\u2022 Fette d\'anguria
        \n\u2022 Gelati
    </string>
    <string name="standard_foods_f">
        \u2022 Panini rusteghi
        \n\u2022 Panini freddi
        \n\u2022 Patatine fritte
        \n\u2022 Fette d\'anguria
        \n\u2022 Gelati
    </string>
    <string name="standard_foods_s">Oltre al piatto della serata la cucina propone:
        \n\u2022 Panini freddi
        \n\u2022 Patatine fritte
        \n\u2022 Fette d\'anguria
        \n\u2022 Gelati
    </string>
    <string-array name="day_opening_time">
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>19:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>19:30</item>
        <item>Aperto tutto il giorno fino le 22:00</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>20:30</item>
        <item>19:30</item>
    </string-array>
    <string name="standard_opening_time">20:30</string>
    <string name="june">Giugno</string>
    <string name="july">Luglio</string>
    <string name="sunday">D</string>
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">M</string>
    <string name="thursday">G</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="this_evening">Questa sera</string>
    <string name="notifications">Notifiche</string>
    <string name="evenings_notifications">Notifiche serate</string>
    <string name="firebase_notifications">Notifiche maltempo, notizie e cambiamenti</string>
    <string name="share_title">in Anguriara al rocolo di Giavenale:</string>
    <string name="pravolley">Pravolley</string>
    <string name="schedule">Programma</string>
    <string name="pravolley_schedule">Sabato 13 luglio
        \nDomenica 14 luglio
    </string>
    <string name="regulation">Regolamento</string>
    <string name="pravolley_ragulation">\u2022 Torneo misto 4 contro 4 su manto erboso;
        \n\u2022 Minimo 2 ragazze in campo, e, se questo non risulta possibile, 1 ragazza e solo 2 ragazzi;
        \n\u2022 Ogni squadra dovrà portarsi un pallone da pallavolo;
        \n\u2022 Le squadre inoltre dovranno arbitrare a rotazione;
        \n\u2022 Durante i gironi iniziali si svolgeranno 2 set a 21 punti, senza tie-break;
        \n\u2022 Il punteggio durante i gironi corrisponderà al numero di punti fatti durante i 2 set, e per le squadre che vincono entrambi i set un oltre bonus di 5 punti.
        \n\u2022 Premi per le prime 3 squadre classificate!
    </string>
    <string name="inscriptions">Iscrizioni</string>
    <string name="pravolley_inscriptions">Le iscrizioni del torneo PraVolley 2019 saranno aperte dal 1 giugno al 22 giugno 2019 compilando l\'apposito form disponibile dal 1 giugno nel nostro sito internet.
        Non si accettano prenotazioni o altri tipi d\'iscrizioni. Per qualsiasi informazione scrivete all\'indirizzo email: pravolley.anguriara@gmail.com
    </string>
    <string name="container_title">Il Container</string>
    <string name="container_description">Anche quest\'anno noi del team Anguriara abbiamo sentito l\'esigenza di presentare qualcosa di diverso e più giovanile, cercando di riciclare l’usato (e facendoci anche il mazzo), per proporre prodotti locali e soprattutto far degustare birre artigianali, il tutto seduti su comodi divanetti fatti con bancali. Ritorna \"El Conteiner\", un chiosco ricavato da un container navale di 6 x 3 metri.</string>
    <string name="agritour_title">Agritour</string>
    <string name="agritour_description">Agritour è un progetto dedicato al viaggiare lento creato per tornare a vivere la campagna vicentina tra Vicenza e le Piccole Dolomiti attraverso percorsi su strade secondarie e incontri con le aziende agricole, i loro prodotti e il loro lavoro.
        \nL\'Agritour dea Molonara è un percorso di 24 km accessibile a tutti e aperto tutto l\'anno attraverso la campagna di Schio, Marano Vicentino e Zanè per ri-scoprire che \"ciò che non siamo più abituati a vedere\" lo troviamo a pochi passi da casa.
        \nAlcuni prodotti utilizzati in Anguriara sono delle aziende di agritour.
    </string>
    <string name="where_we_are">Dove Siamo</string>
    <string name="who_we_are">Chi Siamo</string>
</resources>