<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checkable="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:orderInCategory="100"
            android:title="@string/home" />
        <item
            android:id="@+id/calendar"
            android:checkable="true"
            android:icon="@drawable/ic_event_black_24dp"
            android:orderInCategory="100"
            android:title="@string/calendar" />
        <item
            android:id="@+id/pravolley"
            android:checkable="true"
            android:icon="@drawable/ic_local_florist_black_24dp"
            android:orderInCategory="100"
            android:title="@string/pravolley" />
        <item
            android:id="@+id/news"
            android:checkable="true"
            android:icon="@drawable/ic_fiber_new_black_24dp"
            android:orderInCategory="100"
            android:title="@string/news" />
        <item
            android:id="@+id/where_we_are"
            android:checkable="true"
            android:icon="@drawable/ic_place_black_24dp"
            android:orderInCategory="100"
            android:title="@string/where_we_are" />
        <item
            android:id="@+id/who_we_are"
            android:checkable="true"
            android:icon="@drawable/ic_people_black_24dp"
            android:orderInCategory="100"
            android:title="@string/who_we_are" />
    </group>
    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:checkable="true"
            android:icon="@drawable/ic_settings_black_24dp"
            android:orderInCategory="100"
            android:title="@string/settings" />
    </group>
</menu>