<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingRight="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingTop="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingBottom="@dimen/activity_horizontal_margin_with_card_view" >
        <android.support.v7.widget.CardView
            android:id="@+id/schedule_card_view"
            style="@style/card_view"
            android:layout_margin="0dp" >
            <RelativeLayout
                style="@style/card_view_layout" >
                <ImageView
                    android:id="@+id/schedule_icon"
                    style="@style/card_view_icon"
                    android:src="@drawable/ic_event_black_24dp"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/schedule_title"
                    style="@style/card_view_subheading"
                    android:text="@string/schedule"
                    android:layout_toRightOf="@+id/schedule_icon"
                    android:layout_toEndOf="@+id/schedule_icon" />
                <ImageView
                    android:id="@+id/pravolley_image"
                    style="@style/card_view_image"
                    android:src="@drawable/pravolley"
                    android:layout_below="@id/schedule_icon"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/schedule_text"
                    style="@style/card_view_text"
                    android:layout_below="@id/pravolley_image"
                    android:text="@string/pravolley_schedule" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/regulation_card_view"
            style="@style/card_view">
            <RelativeLayout
                style="@style/card_view_layout" >
                <ImageView
                    android:id="@+id/regulation_icon"
                    style="@style/card_view_icon"
                    android:src="@drawable/ic_assignment_black_24dp"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/regulation_title"
                    style="@style/card_view_subheading"
                    android:text="@string/regulation"
                    android:layout_toRightOf="@+id/regulation_icon"
                    android:layout_toEndOf="@+id/regulation_icon"/>
                <TextView
                    android:id="@+id/regulation_text"
                    style="@style/card_view_text"
                    android:layout_below="@id/regulation_icon"
                    android:text="@string/pravolley_ragulation" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/inscriptions_card_view"
            style="@style/card_view">
            <RelativeLayout
                style="@style/card_view_layout" >
                <ImageView
                    android:id="@+id/inscriptions_icon"
                    style="@style/card_view_icon"
                    android:src="@drawable/ic_mail_black_24dp"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/inscriptions_title"
                    style="@style/card_view_subheading"
                    android:text="@string/inscriptions"
                    android:layout_toRightOf="@+id/inscriptions_icon"
                    android:layout_toEndOf="@+id/inscriptions_icon"/>
                <TextView
                    android:id="@+id/inscriptions_text"
                    style="@style/card_view_text"
                    android:layout_below="@+id/inscriptions_icon"
                    android:text="@string/pravolley_inscriptions" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>