<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingRight="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingTop="@dimen/activity_horizontal_margin_with_card_view"
        android:paddingBottom="@dimen/activity_horizontal_margin_with_card_view" >
        <android.support.v7.widget.CardView
            android:id="@+id/container_card_view"
            style="@style/card_view"
            android:layout_margin="0dp" >
            <RelativeLayout
                style="@style/card_view_layout" >
                <TextView
                    android:id="@+id/container_title"
                    style="@style/card_view_subheading"
                    android:text="@string/container_title" />
                <ImageView
                    android:id="@+id/pravolley_image"
                    style="@style/card_view_image"
                    android:src="@drawable/image_mockup2"
                    android:layout_below="@id/container_title"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/container_text"
                    style="@style/card_view_text"
                    android:layout_below="@id/pravolley_image"
                    android:text="@string/container_description" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/agritour_card_view"
            style="@style/card_view">
            <RelativeLayout
                style="@style/card_view_layout" >
                <TextView
                    android:id="@+id/agritour_title"
                    style="@style/card_view_subheading"
                    android:text="@string/agritour_title" />
                <ImageView
                    android:id="@+id/agritour_image"
                    style="@style/card_view_image"
                    android:src="@drawable/image_mockup2"
                    android:layout_below="@id/agritour_title"
                    android:contentDescription="@null"/>
                <TextView
                    android:id="@+id/agritour_text"
                    style="@style/card_view_text"
                    android:layout_below="@id/agritour_image"
                    android:text="@string/agritour_description" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>